--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="navbar">
             <img class="iconNb" src="src/img/icone.PNG" alt="bn">
             <a href="#nossaHistoria">Sobre</a>
-            <a href="#presente">Lista de Presentes</a>
-            <a href="#contact">Presença</a>
+            <a href="#presente">| Lista Presentes |</a>
+            <a href="#contact">Confirmar Presença</a>
           <!--  <a href="#local">Local</a>-->
 
 
