--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
                 <!--- menu -->
                 <div class="row">
                     <div class="menus col-12 ">
-                        <a href="#presente">
+                        <a href="#ListaPresente">
                             <div class="menu col "><!--class="iconelistaPresente" -->
                                 <img src="src/img/iconessLista.png" width="52px" alt="">
                             </div>
                         </a>
 
-                        <a href="#contac">
+                        <a href="#ConfirmarPresenca">
                             <div class="menu col "><!--class="iconePresenca" -->
                                 <img src="src/img/iconessConfirme2.png" width="55%" alt="">
                             </div>
                         </a>
-                        <a href="#local">
+                        <a href="#LocalEvento">
                             <div class="menu col "><!--lass="iconessLocalizacao" -->
                                 <img c src="src/img/iconessLocalizacao.png" width="55%" alt="">
                             </div>
@@ -261,7 +261,7 @@
 
         </section>
 
-        <div class=" col-12">
+        <div class=" col-12" id="ListaPresente">
 
             <div class="listapresentes" id="presente">
                 <h1>Opções de Presentes</h1>
@@ -271,11 +271,11 @@
                     <img class="frasePresentes" src="src/img/frase 2.PNG" width="200%" alt="">
                     <br><br>
                     <!-- 
-            <p>“Queridos convidados...
-            Sintam-se a vontade para nos presentear com o que sentir, podendo tambem, ser um item da lista, ou algum valor.
-            Saiba que sua presença já será o nosso maior presente!  
-            </p>
-            -->
+                    <p>“Queridos convidados...
+                    Sintam-se a vontade para nos presentear com o que sentir, podendo tambem, ser um item da lista, ou algum valor.
+                    Saiba que sua presença já será o nosso maior presente!  
+                    </p>
+                     -->
 
                     <div class="row">
                         <a href="https://www.mercadolivre.com.br/presentes/presentes-de-casamento-oc8ty"><img
@@ -402,7 +402,7 @@
 
 
             <!--Confirmar Presença-->
-            <div>
+            <div id="ConfirmarPresenca">
                 <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
 
                 <img class="dataCasamento" src="src/img/confirmarPresenca.PNG" width="100%" alt="" id="contact">
@@ -485,7 +485,6 @@
                 <!-- TEMPO-->
                 <section>
                     <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
-
                 </section>
 
                 <br><br><br>
@@ -493,8 +492,9 @@
 
             </div>
 
-            <div class="row left">
+            <div class="row left" id="LocalEvento">
                 <img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt="">
+                
                 <!-- Localização Maps-->
 
                 <div class="row">
