Removendo o frame do meli

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <br>
 
 
-                <!--- MELI Presente opicional-->
+            <!--- MELI Presente opicional
                 <div class="frameMeli">
                     <div class="fixada col-9">
                         <a href="indexHomeConvidado.html"></a>
@@ -301,7 +301,7 @@
 
                         <img class="flormeiomenor" src="src/img/flor5MeioDir.png" alt="">
                     </div>
-                    <!--Mercado livre-->
+                    <!--frame Mercado livre
                     <iframe src="https://www.mercadolivre.com.br/presentes/presentes-de-casamento-oc8ty" border="0"
                         sroll="none" width="100%" height="800px" name="Lista de Presentes"></iframe>
 
@@ -313,6 +313,12 @@
                     </div>
 
                 </div>
+            -->
+            <div class="row">
+                <img class="dataCasamento" src="src/img/obrigado.PNG" width="60%" alt=""></a>
+                <br>
+            </div>
+                
             </div>
             <img class="floralname" src="src/img/flor5Meio.png" width="100%" alt="">
         </div>
