--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
             <!-- TEMPO-->
             <section>
-                <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
+                <a href="vs.html"> <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt=""></a>
             </section>
 
             <br><br><br>
