--- a/index.html
+++ b/index.html
@@ -476,19 +476,19 @@
 
             </div>
 
-            <!-- TEMPO-->
+            <!-- TEMPO
             <section>
-                <a href="vs.html"> <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt=""></a>
+                 <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
             </section>
 
             <br><br><br>
-
+        -->
 
         </div>
 
         <!-- Localização Maps-->
         <div class="row left">
-            <img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt="">
+            <a href="vs.html"><img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt=""></a>
 
 
             <div class="row" id="LocalEvento">
