--- a/vs.html
+++ b/vs.html
@@ -83,67 +83,19 @@
     </div>
     </div> <!--Controles de áudio -->
 
-    <div class="row col-12">
 
-        <div class="row left">
-            <img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt="">
-        </div>
+    <!--Confirmar Presença-->
+    <div id="ConfirmarPresenca">
+        <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
 
-    </div>
+        <img class="dataCasamento" src="src/img/confirmarPresenca.PNG" width="100%" alt="" id="contact">
 
+        <div class="col-12 col-s-12">
 
-
-    <div class="col-12 convite">
-
-
-        <div><!--Nome Noivos-->
-            <img class="nomes" src="src/img/nomesTrasparente.PNG" width="80%" alt="nomes noivos">
-        </div>
-
-
-        <img class="floralname1" src="src/img/flor5Meio.png" width="100%" alt="">
-
-
-
-        <div id="home"> <!--Time-->
-
-            <!-- TEMPO-->
-            <section id="countdown" class="full-screen" width="100%">
-                <h3>Contagem Regressiva para o Casamento</h3> <br>
-                <div class="col tempo " id="timer" width="100%">
-                    <div class="col ">
-                        <span class="col " id="days"></span>
-                        Dias
-                    </div>
-                    <div>
-                        <span class="col " id="hours"></span>
-                        Horas
-                    </div>
-                    <div>
-                        <span class="col " id="minutes"></span>
-                        Minutos
-                    </div>
-                    <div>
-                        <span class="col " id="seconds"></span>
-                        Segundos
-                    </div>
-                </div>
-            </section>
-        </div>
-
-
-        <!--Confirmar Presença-->
-        <div id="ConfirmarPresenca">
-            <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
-
-            <img class="dataCasamento" src="src/img/confirmarPresenca.PNG" width="100%" alt="" id="contact">
-
-            <div class="col-12 col-s-12">
-
-                <form class="col-12" id="wedding-form"
-                    action="https://script.google.com/macros/s/AKfycbxSgOGkWd4KnGSuqyko4VvREvqGlJZWNdH9AhohmvSoIAbdoN5szTGdBum7L4sMjvwf/exec"
-                    method="POST" onsubmit="return handleFormSubmit(event)">
-                    <!-- <div class="col-12 col-s-12">
+            <form class="col-12" id="wedding-form"
+                action="https://script.google.com/macros/s/AKfycbxSgOGkWd4KnGSuqyko4VvREvqGlJZWNdH9AhohmvSoIAbdoN5szTGdBum7L4sMjvwf/exec"
+                method="POST" onsubmit="return handleFormSubmit(event)">
+                <!-- <div class="col-12 col-s-12">
                         <label class="asideform col-12" for="nome">
                             <h5>Qual é o seu nome?*</h5>
                             <input class="asideform col-12" type="text" id="nome" name="nome" required>
@@ -188,30 +140,30 @@
                         <button class="button col-12" type="submit">Enviar</button>
 
                     </div>-->
-                </form>
+            </form>
 
-                <!-- ver dados cadastrados-->
-                <p class="col-12" id="form-status"></p>
-                <div class="col-12">
-                    <div class="row">
-                        <button class="button col-6" id="load-data" progress> Carregar Dados </button>
-                    </div>
-                    <table class="col-12" id="data-table">
-                        <thead>
-                            <tr>
-                                <!-- Cabeçalhos da tabela serão inseridos aqui -->
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Linhas de dados serão inseridas aqui -->
-                        </tbody>
-                    </table>
+            <!-- ver dados cadastrados-->
+            <p class="col-12" id="form-status"></p>
+            <div class="col-12 l-m">
+                <div class="row">
+                    <button class="button col-6" id="load-data" progress> Carregar Dados </button>
                 </div>
-
-
+                <table class="col-12" id="data-table">
+                    <thead>
+                        <tr>
+                            <!-- Cabeçalhos da tabela serão inseridos aqui -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Linhas de dados serão inseridas aqui -->
+                    </tbody>
+                </table>
             </div>
 
+
         </div>
+
+    </div>
     </div>
 
 
