--- a/vs.html
+++ b/vs.html
@@ -55,7 +55,7 @@
     <div class="navbar row col-12 ">
 
         <div class="navbar">
-            <img class="iconNb" src="src/img/icone.PNG" alt="bn">
+            <a href="https://bianca-e-natan.netlify.app/"> <img class="iconNb" src="src/img/icone.PNG" alt="bn"></a>
             <a href="#nossaHistoria">Sobre</a>
             <a href="#presente">| Lista Presentes |</a>
             <a href="#contact">Confirmar Presença</a>
@@ -81,10 +81,10 @@
 
         <!-- SOM -->
     </div>
-    </div> <!--Controles de áudio -->
+    <!--Controles de áudio -->
 
 
-    <!--Confirmar Presença-->
+    <!--Confirmar Presença
     <div id="ConfirmarPresenca">
         <img class="flor5MeioDir" src="src/img/flor5MeioDir.png" alt="">
 
@@ -95,7 +95,7 @@
             <form class="col-12" id="wedding-form"
                 action="https://script.google.com/macros/s/AKfycbxSgOGkWd4KnGSuqyko4VvREvqGlJZWNdH9AhohmvSoIAbdoN5szTGdBum7L4sMjvwf/exec"
                 method="POST" onsubmit="return handleFormSubmit(event)">
-                <!-- <div class="col-12 col-s-12">
+           <div class="col-12 col-s-12">
                         <label class="asideform col-12" for="nome">
                             <h5>Qual é o seu nome?*</h5>
                             <input class="asideform col-12" type="text" id="nome" name="nome" required>
@@ -139,29 +139,29 @@
 
                         <button class="button col-12" type="submit">Enviar</button>
 
-                    </div>-->
-            </form>
+                    </div>
+            </form> -->
 
-            <!-- ver dados cadastrados-->
-            <p class="col-12" id="form-status"></p>
-            <div class="col-12 l-m">
-                <div class="row">
-                    <button class="button col-6" id="load-data" progress> Carregar Dados </button>
-                </div>
-                <table class="col-12" id="data-table">
-                    <thead>
-                        <tr>
-                            <!-- Cabeçalhos da tabela serão inseridos aqui -->
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Linhas de dados serão inseridas aqui -->
-                    </tbody>
-                </table>
-            </div>
-
-
+    <!-- ver dados cadastrados-->
+    <p class="col-12" id="form-status"></p>
+    <div class="col-12 l-m">
+        <div class="row">
+            <button class="button col-6" id="load-data" progress> Carregar Dados </button>
         </div>
+        <table class="col-12" id="data-table">
+            <thead>
+                <tr>
+                    <!-- Cabeçalhos da tabela serão inseridos aqui -->
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Linhas de dados serão inseridas aqui -->
+            </tbody>
+        </table>
+    </div>
+
+
+    </div>
 
     </div>
     </div>
