--- a/index.html
+++ b/index.html
@@ -495,14 +495,14 @@
 
                 <!--Titulo Localizacao-->
 
-                <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""
-                        id="local"></a>
+                <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
                 <img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">
 
 
                 <!--Local-->
                 <div class="row">
                     <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">
+                    <h5>Estrada Ribeirão, 1708 - Chácara Roselandia, <br> Cotia - SP,06702-567</h5>
 
                     <div class="col-6 local">
                         <img class="localização" src="src/img/localização.jpg" width="100%" alt="">
