--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <img src="src/img/iconessConfirme2.png" width="55%" alt="">
                             </div>
                         </a>
-                        <a href="#LocalEvento">
+                        <a href="#LocalEventos">
                             <div class="menu col "><!--lass="iconessLocalizacao" -->
                                 <img c src="src/img/iconessLocalizacao.png" width="55%" alt="">
                             </div>
@@ -225,7 +225,7 @@
                 </p>
             </div>
         </div>
-    
+
         <!-- retirando o save date
         <div class="video col-12" width="100%">
             <div class="row col-12">
@@ -289,7 +289,7 @@
                 <br>
 
 
-            <!--- MELI Presente opicional
+                <!--- MELI Presente opicional
                 <div class="frameMeli">
                     <div class="fixada col-9">
                         <a href="indexHomeConvidado.html"></a>
@@ -314,11 +314,11 @@
 
                 </div>
             -->
-            <div class="row">
-                <img class="dataCasamento" src="src/img/obrigado.PNG" width="60%" alt=""></a>
-                <br>
-            </div>
-                
+                <div class="row">
+                    <img class="dataCasamento" src="src/img/obrigado.PNG" width="60%" alt=""></a>
+                    <br>
+                </div>
+
             </div>
             <img class="floralname" src="src/img/flor5Meio.png" width="100%" alt="">
         </div>
@@ -487,36 +487,40 @@
         </div>
 
         <!-- Localização Maps-->
-        <div class="row left">
-            <a href="vs.html"><img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt=""></a>
+        <div id="LocalEventos">
+            <div class="row left">
+                <a href="vs.html"><img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%"
+                        alt=""></a>
 
 
-            <div class="row" id="LocalEvento">
-
-                <!--Titulo Localizacao-->
-
-                <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
-                <img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">
-
-
-                <!--Local-->
                 <div class="row">
-                    <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">
-                    <h5 >Estrada Ribeirão, 1708 - Chácara Roselandia, <br> Cotia - SP,06702-567</h5>
 
-                    <div class="col-6 local">
-                        <img class="localização" src="src/img/localização.jpg" width="100%" alt="">
-                    </div>
-                    <div class="col-6 maps">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.556169347731!2d-46.93801422509664!3d-23.573324078791654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf06fc51ad158d%3A0x833e3f3b1f5e524e!2sMapri%20Eventos!5e1!3m2!1spt-BR!2sbr!4v1722538430608!5m2!1spt-BR!2sbr"
-                            width="100%" height="300px" style="border:0;padding:0; margin: 0;" allowfullscreen=""
-                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <!--Titulo Localizacao-->
+
+                    <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
+                    <img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">
+
+
+                    <!--Local-->
+                    <div class="row">
+                        <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">
+                        <div class="col-6 local">
+
+                        <h5>Estrada Ribeirão, 1708 - Chácara Roselandia, <br> Cotia - SP,06702-567</h5>
+</div>
+                        <div class="col-6 local">
+                            <img class="localização" src="src/img/localização.jpg" width="100%" alt="">
+                        </div>
+                        <div class="col-6 maps">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.556169347731!2d-46.93801422509664!3d-23.573324078791654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf06fc51ad158d%3A0x833e3f3b1f5e524e!2sMapri%20Eventos!5e1!3m2!1spt-BR!2sbr!4v1722538430608!5m2!1spt-BR!2sbr"
+                                width="100%" height="300px" style="border:0;padding:0; margin: 0;" allowfullscreen=""
+                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- Footer -->
         <footer>
             <div class="footer col-12">
