--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="navbar row col-12 ">
 
         <div class="navbar">
-            <img class="iconNb" src="src/img/icone.PNG" alt="bn">
+            <a href="https://bianca-e-natan.netlify.app/"><img class="iconNb" src="src/img/icone.PNG" alt="bn"></a>
             <a href="#nossaHistoria">Sobre</a>
             <a href="#presente">| Lista Presentes |</a>
             <a href="#contact">Confirmar Presença</a>
