--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <img src="src/img/iconessConfirme2.png" width="55%" alt="">
                             </div>
                         </a>
-                        <a href="#LocalEventos">
+                        <a href="#LocalEvento">
                             <div class="menu col "><!--lass="iconessLocalizacao" -->
                                 <img c src="src/img/iconessLocalizacao.png" width="55%" alt="">
                             </div>
@@ -485,7 +485,6 @@
         -->
 
         </div>
-    </div>
 
     <!-- Localização Maps-->
     <div class="row left">
@@ -493,17 +492,17 @@
 
 
         <div class="row">
-            <div id="LocalEventos">
 
-                <!--Titulo Localizacao-->
+            <!--Titulo Localizacao-->
 
-                <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
-                <img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">
+            <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
+            <!--<img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">-->
+            <div id="LocalEvento">
 
 
                 <!--Local-->
                 <div class="row">
-                    <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">
+                   <!-- <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">-->
                     <div class="col-s-12 local">
                         <h5>Estrada Ribeirão, 1708 - Chácara Roselandia, <br> Cotia - SP,06702-567</h5>
                     </div>
