--- a/index.html
+++ b/index.html
@@ -53,16 +53,15 @@
 
 <body>
     <div class="navbar row col-12 ">
-
-        <div class="navbar">
-            <a href="https://bianca-e-natan.netlify.app/"><img class="iconNb" src="src/img/icone.PNG" alt="bn"></a>
-            <a href="#nossaHistoria">Sobre</a>
-            <a href="#presente">| Lista Presentes |</a>
-            <a href="#contact">Confirmar Presença</a>
-            <!--  <a href="#local">Local</a>-->
-
-
-        </div>
+        <a href="https://bianca-e-natan.netlify.app/">
+            <div class="navbar">
+                <img class="iconNb" src="src/img/icone.PNG" alt="bn">
+                <a href="#nossaHistoria">Sobre</a>
+                <a href="#presente">| Lista Presentes |</a>
+                <a href="#contact">Confirmar Presença</a>
+                <!--  <a href="#local">Local</a>-->
+            </div>
+        </a>
     </div>
 
     <div class="row">
@@ -486,70 +485,70 @@
 
         </div>
 
-    <!-- Localização Maps-->
-    <div class="row left">
-        <a href="vs.html"><img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt=""></a>
+        <!-- Localização Maps-->
+        <div class="row left">
+            <a href="vs.html"><img class="flor5MeioEsq col-1" src="src/img/flor5MeioEsq.png" width="100%" alt=""></a>
 
 
-        <div class="row">
+            <div class="row">
 
-            <!--Titulo Localizacao-->
+                <!--Titulo Localizacao-->
 
-            <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
-            <!--<img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">-->
-            <div id="LocalEvento">
+                <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
+                <!--<img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">-->
+                <div id="LocalEvento">
 
 
-                <!--Local-->
-                <div class="row">
-                   <!-- <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">-->
-                    <div class="col-s-12 local">
-                        <h5>Estrada Ribeirão, 1708 - Chácara Roselandia, <br> Cotia - SP,06702-567</h5>
-                    </div>
-                    <div class="col-6 local">
-                        <img class="localização" src="src/img/localização.jpg" width="100%" alt="">
-                    </div>
-                    <div class="col-6 maps">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.556169347731!2d-46.93801422509664!3d-23.573324078791654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf06fc51ad158d%3A0x833e3f3b1f5e524e!2sMapri%20Eventos!5e1!3m2!1spt-BR!2sbr!4v1722538430608!5m2!1spt-BR!2sbr"
-                            width="100%" height="300px" style="border:0;padding:0; margin: 0;" allowfullscreen=""
-                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <!--Local-->
+                    <div class="row">
+                        <!-- <img class="enderecoCasamento" src="src/img/endereçoCasamento.PNG" width="100%" alt="">-->
+                        <div class="col-s-12 local">
+                            <h5>Estrada Ribeirão, 1708 - Chácara Roselandia, <br> Cotia - SP,06702-567</h5>
+                        </div>
+                        <div class="col-6 local">
+                            <img class="localização" src="src/img/localização.jpg" width="100%" alt="">
+                        </div>
+                        <div class="col-6 maps">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3323.556169347731!2d-46.93801422509664!3d-23.573324078791654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf06fc51ad158d%3A0x833e3f3b1f5e524e!2sMapri%20Eventos!5e1!3m2!1spt-BR!2sbr!4v1722538430608!5m2!1spt-BR!2sbr"
+                                width="100%" height="300px" style="border:0;padding:0; margin: 0;" allowfullscreen=""
+                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Footer -->
-    <footer>
-        <div class="footer col-12">
-            <div class="col-12">
+        <!-- Footer -->
+        <footer>
+            <div class="footer col-12">
+                <div class="col-12">
 
-                <a href="index.html"><img class="florCentro" src="src/img/flor5Meio.png" width="100%" alt=""></a>
-                <br><br>
-            </div>
-            <img class="zoom-img" src="src/img/icone.PNG" alt="Flor Esquerda">
-
-
-            <div class="col-12">
-
-                <p>
-                    <span>
-                        <a href="https://api.whatsapp.com/send?phone=5511930561783"><b>WhatsApp da Noiva</b></a>
-                        &nbsp; &nbsp;e&nbsp;&nbsp;
-                        <a href="https://api.whatsapp.com/send?phone=5511989104635">
-                            <b>WhatsApp do Noivo</b></a>
-                    </span>
+                    <a href="index.html"><img class="florCentro" src="src/img/flor5Meio.png" width="100%" alt=""></a>
                     <br><br>
-                </p>
+                </div>
+                <img class="zoom-img" src="src/img/icone.PNG" alt="Flor Esquerda">
+
+
+                <div class="col-12">
+
+                    <p>
+                        <span>
+                            <a href="https://api.whatsapp.com/send?phone=5511930561783"><b>WhatsApp da Noiva</b></a>
+                            &nbsp; &nbsp;e&nbsp;&nbsp;
+                            <a href="https://api.whatsapp.com/send?phone=5511989104635">
+                                <b>WhatsApp do Noivo</b></a>
+                        </span>
+                        <br><br>
+                    </p>
+                </div>
             </div>
-        </div>
 
-    </footer>
+        </footer>
 
-    <script src="src/js/time.js"></script>
-    <script src="src/js/musica.js"></script>
-    <script src="src/js/formPos.js"></script>
-    <script src="src/js/formGet.js"></script>
+        <script src="src/js/time.js"></script>
+        <script src="src/js/musica.js"></script>
+        <script src="src/js/formPos.js"></script>
+        <script src="src/js/formGet.js"></script>
 </body>
 
 </html>
