--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <img src="src/img/iconessConfirme2.png" width="55%" alt="">
                             </div>
                         </a>
-                        <a href="#LocalEvento">
+                        <a href="#Local">
                             <div class="menu col "><!--lass="iconessLocalizacao" -->
                                 <img c src="src/img/iconessLocalizacao.png" width="55%" alt="">
                             </div>
@@ -496,7 +496,7 @@
 
                 <a href="index.html"><img class="nomes" src="src/img/localizacaoFonte.PNG" width="80%" alt=""></a>
                 <!--<img class="florCentro" src="src/img/flor5Meiomenor.png" alt="">-->
-                <div id="LocalEvento">
+                <div id="Local">
 
 
                     <!--Local-->
